Added Sucess and Fail Dialogs inside Pagamento module

--- a/frontend/src/main/frontend/src/app/main/pagamento/pagamento.html
+++ b/frontend/src/main/frontend/src/app/main/pagamento/pagamento.html
@@ -131,7 +131,7 @@
         </div>
 
         <div layout="row" layout-align="center">
-          <md-button ng-click="vm.cadastrarPagamento()" class="md-accent md-raised">Cadastrar</md-button>
+          <md-button ng-click="vm.cadastrarPagamento($event)" class="md-accent md-raised">Cadastrar</md-button>
           <md-button ng-click="vm.limpaForm()">Limpar</md-button>
         </div>
       </form>
