--- a/frontend/src/main/frontend/src/app/main/relatorio/dialogs/relatorio/relatorio-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/relatorio/dialogs/relatorio/relatorio-dialog.html
@@ -7,12 +7,14 @@
     <!-- <md-toolbar class="md-accent" layout="column"> -->
 
     <!-- TOOLBAR TOP -->
-    <div class=" md-toolbar-tools md-toolbar-tools-top" layout="row" layout-align="space-between center">
+
+    <div class="md-toolbar md-toolbar-tools md-toolbar-tools-top" layout="row" layout-align="space-between center">
       <span class="title">{{vm.title}}</span>
       <md-button class="md-icon-button" ng-click="vm.closeDialog()" aria-label="Fechar diálogo">
         <md-icon md-font-icon="icon-close"></md-icon>
       </md-button>
     </div>
+
     <!-- / TOOLBAR TOP -->
 
     <!-- TOOLBAR MIDDLE -->
