--- a/frontend/src/main/frontend/src/app/main/usuario/dialogs/contact/usuario-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/usuario/dialogs/contact/usuario-dialog.html
@@ -99,8 +99,8 @@
       <label>Ativo?</label>
       <md-input-container class="md-icon-float md-block">
         <md-radio-group ng-model="vm.contact.ativo" required>
-          <md-radio-button value=true>Ativado</md-radio-button></br>
-          <md-radio-button value=false>Desativado</md-radio-button>
+          <md-radio-button value=true>Sim</md-radio-button></br>
+          <md-radio-button value=false>Não</md-radio-button>
         </md-radio-group>
       </md-input-container>
       <!-- Desativado temporariamente -->
