--- a/frontend/src/main/frontend/src/app/main/pagamento/pagamento.html
+++ b/frontend/src/main/frontend/src/app/main/pagamento/pagamento.html
@@ -13,7 +13,7 @@
         <span class="logo-icon">
           <md-icon md-font-icon="icon-credit-card" class="s24"></md-icon>
         </span>
-        <span class="logo-text">Pagamentos</span>
+        <span class="logo-text">Gerenciar Pagamentos</span>
       </div>
     </div>
     <!-- / APP TITLE -->
