--- a/frontend/src/main/frontend/src/app/main/associados/dialogs/associado/associado-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/associados/dialogs/associado/associado-dialog.html
@@ -25,10 +25,9 @@
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
-
         <label>CPF</label>
         <md-icon></md-icon>
-        <input ng-blur="vm.calculaCPF(vm.associado.cpf)" ng-model="vm.associado.cpf" type="text" mask="999.999.999-99" ng-disabled="!vm.newAssociado" required>
+        <input ng-blur="vm.calculaCPF(vm.associado.cpf)" cpf ng-model="vm.associado.cpf" type="text" mask="999.999.999-99" ng-disabled="!vm.newAssociado" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
@@ -64,7 +63,7 @@
       <md-input-container class="md-icon-float md-block">
         <label>Valor Mensal (em reais)</label>
         <md-icon md-font-icon="icon-currency-usd"></md-icon>
-        <input ng-model="vm.associado.valorAtual" type="number" min="0" step="0.01" pattern="[0-9]{1,10}[.]{0,1}[0-9]{0,2}" required>
+        <input ng-model="vm.associado.valorAtual" type="text" ui-money-mask required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
