--- a/frontend/src/main/frontend/src/app/main/pagamento/dialogs/pagamento/pagamento-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/pagamento/dialogs/pagamento/pagamento-dialog.html
@@ -18,11 +18,37 @@
     <!-- DIALOG CONTENT -->
     <md-dialog-content ms-scroll>
 
+      <md-autocomplete flex required
+        md-input-name="autocompleteField"
+        md-input-minlength="2"
+        md-input-maxlength="18"
+        md-no-cache="vm.noCache"
+        md-selected-item="vm.selectedItem"
+        md-search-text="vm.searchText"
+        md-items="item in vm.querySearch(vm.searchText)"
+        md-item-text="item.display"
+        md-require-match
+        md-floating-label="Digite o CPF ou nome de um associado."
+
+        ng-blur="vm.buscaCpf()">
+        <md-item-template>
+          <span md-highlight-text="vm.searchText">{{item.display}}</span>
+        </md-item-template>
+        <div ng-messages="searchForm.autocompleteField.$error" ng-if="searchForm.autocompleteField.$touched">
+          <div ng-message="required">Você <b>precisa</b> digitar um CPF ou nome.</div>
+          <div ng-message="md-require-match">Por favor adicione um CPF ou nome que exista.</div>
+          <div ng-message="minlength">Falta caracteres.</div>
+          <div ng-message="maxlength">Caracteres demais.</div>
+        </div>
+      </md-autocomplete>
+
+      <!--
       <md-input-container>
         <label>CPF do Associado</label>
         <md-icon md-font-icon="icon-account-box"></md-icon>
         <input ng-blur="vm.buscaCpf()" ng-model="vm.associado.formaPgto.associado.cpf" type="text" mask="999.999.999-99" required>
       </md-input-container>
+      -->
 
       <md-input-container>
         <label>Valor Pago</label>
